Following issues resolved on 9 Nov 2025 1. RAD-5574: Android[Prod[1.1.12]]>Profile>Height field showing “cms” instead of “cm” in Profile section 2. RAD-5599: Android[Prod(1.1.12)]>Home page>Bottom navigation bar>Quicklinks>"+" icon size slightly larger than design specification 3. RAD-5629: [Android][Production][Thinkright]affirmations-Changes Saved” popup appears multiple times when Save button is tapped repeatedly on Affirmation screen 4. RAD-5630: [Android][Production][Thinkright]Affirmation category selection popup does not open fully and requires manual drag to expand 5. RAD-5650: [QA][Android][Affirmations]Category icons missing in Affirmation category popup 6. RAD-5660: [QA][Android][Affirmations]Affirmation heading text is not in Merriweather font on Affirmation screen 7. Android[Prod(1.1.12]>SleepRight>Sleep sounds>Blank screen displayed after removing sleep sound content from “Your Playlist” 8. RAD-5611: Android[Prod(1.1.12]>SleepRight>Sleep sounds>content card>Extra space between content heading and timing on Sleep Sounds content card 9. RAD-5612: Android[Prod(1.1.12]>SleepRight>Sleep sounds>content card>“00” timing displayed instead of actual duration on Sleep Sounds content card 10. RAD-5655: [Android][PROD][Purchase Plans Info] Close icon color incorrect 11. RAD-5656: [Android][PROD][Purchase Plans Info] Incorrect heading text 12. RAD-5657: [Android][PROD][Purchase Plans Info] Incorrect heading font 13. RAD-5662: [Android][PROD][Purchase Plans Info] Incorrect font in yellow section 14. RAD-5663: [Android][PROD][Purchase Plans Info] Wrong text “Premium Features” displayed 15. RAD-5665: [Android][PROD][Purchase Plans Info] Heading font color incorrect 16. RAD-5669: [Android][PROD][Subscription History] Heading font incorrect 17. RAD-5673: [Android][PROD][About Us] Incorrect heading text and font 18. RAD-5674: [Android][PROD][Terms & Conditions] Incorrect heading text and font 19. RAD-5675: [Android][PROD][Privacy Policy] Incorrect heading text and font 2

--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -432,7 +432,9 @@
         android:src="@drawable/icon_quicklink_plus"
         app:backgroundTint="@color/rightlife"
         app:layout_anchor="@id/bottom_menu"
-        app:layout_anchorGravity="top|center" />
+        app:layout_anchorGravity="top|center"
+        app:fabCustomSize="54dp"
+        app:maxImageSize="22dp"/>
 
     <LinearLayout
         android:id="@+id/bottom_menu"
