--- a/app/src/main/res/layout/activity_general_information.xml
+++ b/app/src/main/res/layout/activity_general_information.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="General Information"
             android:textColor="@color/txt_color_mind"
             android:textSize="18sp" />
