--- a/app/src/main/res/layout/activity_html_text.xml
+++ b/app/src/main/res/layout/activity_html_text.xml
@@ -21,10 +21,11 @@
             android:src="@drawable/icon_back" />
 
         <TextView
+            android:id="@+id/tvHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="General Information"
             android:textColor="@color/txt_color_mind"
             android:textSize="18sp" />
