--- a/app/src/main/res/layout/activity_sleep_sound_player.xml
+++ b/app/src/main/res/layout/activity_sleep_sound_player.xml
@@ -42,8 +42,7 @@
             android:text="Sleep"
             android:textColor="@color/txt_color_header"
             android:textSize="@dimen/textsize_large18sp"
-            android:fontFamily="@font/dmsans_bold"
-            />
+            android:fontFamily="@font/dmsans_bold" />
 
         <TextView
             android:id="@+id/myPlaylist"
@@ -67,20 +66,37 @@
         app:layout_constraintStart_toStartOf="@+id/albumArt"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_margin="8dp">
-    <TextView
-        android:id="@+id/songTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_card_16dp"
-        android:layout_marginStart="8dp"
-        android:gravity="start"
-        android:text="The Snowman’s First Christmas"
-        android:textColor="@color/text_color_app"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/imageAddToPlayList"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/margin_card_16dp"
+            android:layout_marginStart="8dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/imageAddToPlayList">
+
+            <TextView
+                android:id="@+id/songCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:fontFamily="@font/dmsans_regular"
+                android:text="The Snowman’s First Christmas"
+                android:textColor="@color/text_color_app"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/songTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:fontFamily="@font/dmsans_bold"
+                android:text="The Snowman’s First Christmas"
+                android:textColor="@color/text_color_app"
+                android:textSize="22sp" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageAddToPlayList"
@@ -100,6 +116,7 @@
         android:gravity="start"
         android:text="10 min"
         android:textStyle="bold"
+        android:visibility="gone"
         android:textColor="@color/text_color_app"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
