--- a/app/src/main/res/layout/bottomsheet_height_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_height_selection.xml
@@ -47,7 +47,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="cms"
+                    android:text="cm"
                     android:textSize="16sp"
                     android:fontFamily="@font/dmsans_bold"
                     android:textColor="@color/white"
