--- a/app/src/main/res/layout/item_vertical_song_card.xml
+++ b/app/src/main/res/layout/item_vertical_song_card.xml
@@ -34,7 +34,7 @@
         android:id="@+id/tv_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_marginHorizontal="2dp"
         android:ellipsize="marquee"
         android:fontFamily="@font/dmsans_bold"
         android:minLines="2"
@@ -46,7 +46,7 @@
         android:id="@+id/tv_item_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_marginHorizontal="2dp"
         android:fontFamily="@font/dmsans_regular"
         android:text="dkjfhskj"
         android:textColor="@color/text_color_app"
