--- a/app/src/main/res/layout/row_affirmation_card.xml
+++ b/app/src/main/res/layout/row_affirmation_card.xml
@@ -36,7 +36,7 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="60dp"
-                android:fontFamily="@font/dmsans_bold"
+                android:fontFamily="@font/merriweather_bold"
                 android:gravity="center"
                 android:text="I Am Worthy Of Love And Respect, Just As I Am."
                 android:textColor="@color/white"
