--- a/app/src/main/res/layout/row_journal_list.xml
+++ b/app/src/main/res/layout/row_journal_list.xml
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:text="Great"/>
 
         </LinearLayout>
@@ -111,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="end">
+            android:gravity="end|center_vertical">
 
         <TextView
             android:id="@+id/chip3"
