--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -466,7 +466,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/total_steps_count"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:background="@drawable/edit_step_gaol_background"
+                        android:background="@drawable/add_cart_button_background"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
                         android:gravity="center"
@@ -478,7 +478,7 @@
                             android:layout_height="15dp"
                             android:layout_gravity="center"
                             android:scaleType="fitXY"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:src="@drawable/edit_step_goal"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -491,10 +491,10 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             android:layout_gravity="center"
-                            android:textSize="20sp"
-                            android:textColor="@color/dotted_red"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
                             android:fontFamily="@font/dmsans_bold"
-                            android:text="Edit Your Step Goal" />
+                            android:text="Set Up A Step Goal" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
