--- a/app/src/main/res/layout/activity_new_sleep_sound.xml
+++ b/app/src/main/res/layout/activity_new_sleep_sound.xml
@@ -29,7 +29,52 @@
             android:layout_marginStart="4dp" />
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/bg_search_box"
+        android:elevation="2dp"
+        android:layout_marginHorizontal="16dp">
+
+        <ImageView
+            android:id="@+id/ivSearchIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:src="@drawable/search_new"
+            android:layout_marginStart="12dp" />
+
+        <EditText
+            android:id="@+id/etSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:hint="Search"
+            android:textColor="@color/txt_color_header"
+            android:textColorHint="#747474"
+            android:textSize="16sp"
+            android:paddingStart="36dp"
+            android:paddingVertical="8dp"
+            android:inputType="text"
+            android:fontFamily="@font/dmsans_regular"
+            android:imeOptions="actionSearch"
+            android:singleLine="true" />
+    </FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:overScrollMode="never"
+        android:paddingHorizontal="16dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"/>
+
+
     <LinearLayout
+        android:id="@+id/mainSleepSoundLayout"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:paddingHorizontal="16dp"
