--- a/app/src/main/res/layout/activity_series_list.xml
+++ b/app/src/main/res/layout/activity_series_list.xml
@@ -253,7 +253,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_bold"
                     android:padding="16dp"
-                    android:text="You May Also Like"
+                    android:text="Recommended for you"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:layout_alignParentStart="true" />
