--- a/app/src/main/res/layout/item_recomendation.xml
+++ b/app/src/main/res/layout/item_recomendation.xml
@@ -56,7 +56,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="visible"
             android:layout_marginStart="12dp"
             android:layout_weight="1"
@@ -107,12 +107,13 @@
             <TextView
                 android:id="@+id/titleText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="The Personal Nature of Meaning"
                 android:fontFamily="@font/merriweather_bold"
                 android:textColor="@color/black_no_meals"
                 android:textSize="14sp"
                 android:paddingTop="0dp"
+                android:gravity="center_vertical"
                 android:maxLines="2"
                 android:ellipsize="end" />
 
