--- a/app/src/main/res/layout/row_affirmation_card.xml
+++ b/app/src/main/res/layout/row_affirmation_card.xml
@@ -80,15 +80,23 @@
                 android:layout_marginStart="6dp"
                 android:background="@drawable/rounded_corner_progress_affirmation">
 
-                <com.zhpan.indicator.IndicatorView
-                    android:id="@+id/indicator_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    app:vpi_slide_mode="smooth"
-                    app:vpi_slider_checked_color="@color/white"
-                    app:vpi_slider_normal_color="@android:color/transparent"
-                    app:vpi_style="round_rect" />
+                <HorizontalScrollView
+                    android:id="@+id/indicator_scroller"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:fillViewport="false">
+
+                    <com.zhpan.indicator.IndicatorView
+                        android:id="@+id/indicator_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        app:vpi_slide_mode="normal"
+                        app:vpi_style="round_rect"
+                        app:vpi_slider_checked_color="@color/white"
+                        app:vpi_slider_normal_color="@android:color/transparent" />
+                </HorizontalScrollView>
+
             </LinearLayout>
 
         </LinearLayout>
