--- a/app/src/main/res/layout/fragment_mindfull_graph.xml
+++ b/app/src/main/res/layout/fragment_mindfull_graph.xml
@@ -267,9 +267,10 @@
                                     android:id="@+id/selectedCalorieTv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text=""
+                                    android:textSize="16sp"
+                                    android:textStyle="normal"
                                     android:fontFamily="@font/dmsans_bold"
-                                    android:textSize="32sp"
+
                                     android:textColor="@color/black_no_meals"
                                     />
 
@@ -278,6 +279,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="3dp"
+                                    android:visibility="gone"
                                     android:text="mins"
                                     android:fontFamily="@font/dmsans_regular"
                                     android:textSize="10sp"
