--- a/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
@@ -64,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
+            android:visibility="gone"
             android:stepSize="1.0"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
@@ -73,6 +74,59 @@
             app:layout_constraintTop_toBottomOf="@id/tv_delete_confirm"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:id="@+id/newRatingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toBottomOf="@id/tv_delete_confirm"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/star1"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_star_empty_new"
+                android:padding="2dp" />
+
+            <ImageView
+                android:id="@+id/star2"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_star_empty_new"
+                android:padding="2dp" />
+
+            <ImageView
+                android:id="@+id/star3"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_star_empty_new"
+                android:padding="2dp" />
+
+            <ImageView
+                android:id="@+id/star4"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_star_empty_new"
+                android:padding="2dp" />
+
+            <ImageView
+                android:id="@+id/star5"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_star_empty_new"
+                android:padding="2dp" />
+
+        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_delete"
@@ -82,7 +136,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+            app:layout_constraintTop_toBottomOf="@+id/newRatingBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:orientation="vertical">
@@ -234,7 +288,7 @@
             android:padding="10dp"
             android:maxLength="300"
             android:layout_marginBottom="20dp"
-            android:background="@color/border_line"
+            android:background="@drawable/rounded_edittext_bg"
             android:theme="@style/CustomRatingBar"
             app:layout_constraintTop_toBottomOf="@id/tvRateDescriptions"
             app:layout_constraintStart_toStartOf="parent"
