fixes jira bugs

--- a/app/src/main/res/layout/fragment_sleep_right_landing.xml
+++ b/app/src/main/res/layout/fragment_sleep_right_landing.xml
@@ -2726,7 +2726,7 @@
                     android:layout_width="0dp"
                     android:layout_height="55dp"
                     android:layout_weight="3"
-                    android:src="@drawable/white_sleep_sound_icon" />
+                    android:src="@drawable/ic_sleep_sound" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
