--- a/app/src/main/res/layout/activity_profile_settings.xml
+++ b/app/src/main/res/layout/activity_profile_settings.xml
@@ -53,7 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="16dp"
             android:gravity="center_vertical">
 
             <!-- Profile Picture -->
