--- a/app/src/main/res/layout/item_card_view_ai.xml
+++ b/app/src/main/res/layout/item_card_view_ai.xml
@@ -254,7 +254,7 @@
             <View
                 android:id="@+id/timeline_line1"
                 android:layout_width="0dp"
-                android:layout_height="1dp"
+                android:layout_height="6dp"
                 android:background="#FF9999"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -325,16 +325,16 @@
             <View
                 android:id="@+id/timeline_line"
                 android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="#FF9999"
+                android:layout_height="5dp"
+                android:background="#FFECEB"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <View
                 android:id="@+id/left_marker"
-                android:layout_width="1dp"
-                android:layout_height="6dp"
+                android:layout_width="2dp"
+                android:layout_height="5dp"
                 android:background="#FF0000"
                 app:layout_constraintTop_toTopOf="@id/timeline_line"
                 app:layout_constraintBottom_toBottomOf="@id/timeline_line"
@@ -342,8 +342,8 @@
 
             <View
                 android:id="@+id/right_marker"
-                android:layout_width="1dp"
-                android:layout_height="6dp"
+                android:layout_width="2dp"
+                android:layout_height="5dp"
                 android:background="#FF0000"
                 app:layout_constraintTop_toTopOf="@id/timeline_line"
                 app:layout_constraintBottom_toBottomOf="@id/timeline_line"
