fixes jira bugs

--- a/app/src/main/res/layout/fragment_meal_scan_results.xml
+++ b/app/src/main/res/layout/fragment_meal_scan_results.xml
@@ -61,6 +61,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="-35dp"
+                android:visibility="gone"
                 android:background="@drawable/green_circle"
                 app:layout_constraintBottom_toBottomOf="@id/imgFood"
                 app:layout_constraintStart_toStartOf="@id/imgFood"
