--- a/app/src/main/res/layout/fragment_bed_wakeup_time.xml
+++ b/app/src/main/res/layout/fragment_bed_wakeup_time.xml
@@ -9,18 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:padding="16dp">
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tvQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="What time do you usually go to bed and wake up?"
-            android:textSize="@dimen/textsize_large18sp"
-            android:fontFamily="@font/merriweather_bold"
+            android:layout_marginHorizontal="@dimen/margin_card_16dp"
             android:layout_marginBottom="16dp"
-            android:textColor="@color/menu_icon_color_unselected" />
+            android:fontFamily="@font/merriweather_bold"
+            android:text="What time do you usually go to bed and wake up?"
+            android:textColor="@color/menu_icon_color_unselected"
+            android:textSize="@dimen/textsize_large18sp" />
 
         <!-- Bedtime Label -->
         <TextView
