--- a/app/src/main/res/layout/fragment_view_meal_insights.xml
+++ b/app/src/main/res/layout/fragment_view_meal_insights.xml
@@ -81,6 +81,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="-30dp"
+                    android:visibility="gone"
                     android:background="@drawable/green_circle"
                     app:layout_constraintBottom_toBottomOf="@id/imgFood"
                     app:layout_constraintStart_toStartOf="@id/imgFood"
