--- a/app/src/main/res/layout/item_recomendation.xml
+++ b/app/src/main/res/layout/item_recomendation.xml
@@ -22,8 +22,7 @@
             android:layout_width="120dp"
             android:layout_height="82dp"
             app:cardCornerRadius="10dp"
-            app:cardElevation="0dp"
-            app:cardPreventCornerOverlap="true">
+            app:cardElevation="0dp">
 
             <ImageView
                 android:id="@+id/thumbnailImage"
@@ -36,25 +35,63 @@
 
             <View
                 android:layout_width="match_parent"
-                android:background="#BF000000"
+                android:layout_height="30dp"
                 android:layout_gravity="bottom"
-                android:layout_height="25dp">
-            </View>
+                android:background="#BF000000" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center">
+                <ImageView
+                    android:id="@+id/overlayIcon"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    />
+
+                <TextView
+                    android:id="@+id/bottomText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:textSize="11sp"
+                    android:fontFamily="@font/dmsans_regular"
+                    android:textAllCaps="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/overlayIcon"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <!--<ImageView
+                android:id="@+id/overlayIcon"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="bottom|start"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="6dp"
+                 />
+
+            <TextView
+                android:id="@+id/bottomText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="8dp"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="2dp"
+            android:textColor="#FFFFFF"
+            android:textSize="11sp"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="bold"
+            android:textAllCaps="true" />-->
+
         </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:id="@+id/overlayIcon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginTop="28dp"
-            android:src="@drawable/music_mini_icon"
-            android:contentDescription="Overlay Icon" />
     </FrameLayout>
-
-        <LinearLayout
+    <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:visibility="visible"
