--- a/app/src/main/res/layout/fragment_all_tools_list.xml
+++ b/app/src/main/res/layout/fragment_all_tools_list.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/think_right_light_bg"
     android:layout_height="match_parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             android:layout_height="25dp"
             android:id="@+id/img_back"
             android:src="@drawable/eat_right_back"
-            android:layout_marginStart="22dp"
+            android:layout_marginStart="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -34,6 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/filter_recycler_view"
         android:layout_width="match_parent"
@@ -43,7 +45,8 @@
         app:layout_constraintTop_toBottomOf="@+id/header_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"/>
+        android:padding="15dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
@@ -53,5 +56,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="16dp"/>
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
