--- a/app/src/main/res/layout/fragment_create_routine.xml
+++ b/app/src/main/res/layout/fragment_create_routine.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/gradient_color_background_workout">
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="80dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_toolbar"
                 android:layout_width="match_parent"
@@ -72,6 +75,7 @@
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/list_create_routine_layout"
                 android:layout_width="match_parent"
@@ -80,6 +84,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <TextView
                     android:id="@+id/name_routine_heading"
                     android:layout_width="wrap_content"
@@ -90,6 +95,7 @@
                     android:text="Name Of Routine"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/name_routine_layout"
                     android:layout_width="match_parent"
@@ -101,6 +107,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/name_routine_heading"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
+
                     <TextView
                         android:id="@+id/name_routine_text_view"
                         android:layout_width="0dp"
@@ -115,6 +122,7 @@
                        app:layout_constraintEnd_toStartOf="@+id/edit_icon_create_routine"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>
+
                     <ImageView
                         android:id="@+id/edit_icon_create_routine"
                         android:layout_width="19dp"
@@ -139,6 +147,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/name_routine_layout" />
                 <androidx.appcompat.widget.LinearLayoutCompat
+
                     android:id="@+id/add_btn_log"
                     android:layout_width="62dp"
                     android:layout_height="24dp"
@@ -190,6 +199,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
                 </androidx.recyclerview.widget.RecyclerView>
+
                 <TextView
                     android:id="@+id/no_workout_heading"
                     android:layout_width="match_parent"
@@ -222,51 +232,9 @@
                     app:layout_constraintTop_toBottomOf="@+id/no_workout_heading"
                     app:layout_constraintBottom_toTopOf="@+id/save_workout_routine_btn"
                     />
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/save_workout_routine_btn"
-                    android:layout_width="310dp"
-                    android:layout_height="56dp"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="65dp"
-                    app:layout_constraintTop_toBottomOf="@+id/recyclerview_my_meals_item"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:background="@drawable/add_cart_button_background"
-                    android:gravity="center"
-                    android:layout_marginBottom="30dp">
-
-                    <ImageView
-                        android:id="@+id/icon_plus_save_workout_routine"
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_gravity="center"
-                        android:visibility="gone"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/icon_feather_plus"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        />
-
-                    <TextView
-                        android:id="@+id/tv_log_meal_save_workout_routine"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginStart="3dp"
-                        android:layout_gravity="center"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:fontFamily="@font/dmsans_bold"
-                        android:text="Save Workout Routine"/>
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/add_name_layout"
                 android:layout_width="match_parent"
@@ -370,6 +338,45 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/save_workout_routine_btn"
+        android:layout_width="310dp"
+        android:layout_height="56dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/add_cart_button_background"
+        android:gravity="center"
+        android:layout_marginBottom="20dp">
 
+        <ImageView
+            android:id="@+id/icon_plus_save_workout_routine"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_feather_plus"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tv_log_meal_save_workout_routine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="3dp"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/dmsans_bold"
+            android:text="Save Workout Routine"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
