--- a/app/src/main/res/layout/fragment_view_meal_insights.xml
+++ b/app/src/main/res/layout/fragment_view_meal_insights.xml
@@ -35,9 +35,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@color/meal_log_title"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:layout_marginTop="20dp"
             android:text="View Meal Insights" />
 
