--- a/app/src/main/res/layout/bottomsheet_gender_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_gender_selection.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="80dp"
     android:background="@color/settings_bg_color">
 
     <TextView
