--- a/app/src/main/res/layout/activity_content_details.xml
+++ b/app/src/main/res/layout/activity_content_details.xml
@@ -50,7 +50,7 @@
             android:visibility="visible"/>
     </RelativeLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:paddingBottom="60dp"
         android:layout_height="match_parent">
@@ -322,7 +322,7 @@
 
             <include layout="@layout/loader_layout" />
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
     <!--bottom layout floating like section-->
     <LinearLayout
