--- a/app/src/main/res/layout/activity_new_series_details.xml
+++ b/app/src/main/res/layout/activity_new_series_details.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/merriweather_bold"
-                android:text="Series"
+                android:text="Video Episode"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:maxLines="1"
@@ -225,6 +225,7 @@
                         android:layout_width="1dp"
                         android:layout_height="16dp"
                         android:layout_marginHorizontal="8dp"
+                        android:visibility="gone"
                         android:background="@color/text_color_char_left" />
 
                     <ImageView
@@ -232,6 +233,7 @@
                         android:layout_width="15dp"
                         android:src="@drawable/ic_clock_blue"
                         android:layout_marginHorizontal="8dp"
+                        android:visibility="gone"
                         android:layout_height="15dp" />
 
                     <TextView
@@ -241,7 +243,7 @@
                         android:text="0 mins"
                         android:fontFamily="@font/dmsans_regular"
                         android:textSize="@dimen/textsize_small"
-
+                        android:visibility="gone"
                         android:gravity="center"
                         android:textColor="@color/txt_color_header" />
 
@@ -531,7 +533,7 @@
         android:background="@drawable/roundedcornershape"
         android:gravity="center"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/image_like_article"
@@ -541,13 +543,13 @@
             android:src="@drawable/like_article_inactive" />
 
         <TextView
-            android:id="@+id/txt_topic2"
+            android:id="@+id/txtLikeCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/dmsans_medium"
-            android:text="2 Likes"
+            android:text="2"
             android:textColor="@android:color/black"
             android:textSize="@dimen/textsize_small" />
 
@@ -577,4 +579,5 @@
             android:textSize="@dimen/textsize_small" />
 
     </LinearLayout>
+
 </RelativeLayout>
