--- a/app/src/main/res/layout/activity_past_report.xml
+++ b/app/src/main/res/layout/activity_past_report.xml
@@ -23,12 +23,12 @@
             android:id="@+id/headerTitle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="Scan History"
-            android:fontFamily="@font/dmsans_bold"
-            android:textSize="18sp"
-            android:textColor="@color/txt_color_mind"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:fontFamily="@font/merriweather_bold"
+            android:gravity="center_vertical"
+            android:text="Past Reports"
+            android:textColor="@color/txt_color_mind"
+            android:textSize="18sp" />
 
     </LinearLayout>
     <LinearLayout
