--- a/app/src/main/res/layout/activity_series_list.xml
+++ b/app/src/main/res/layout/activity_series_list.xml
@@ -210,22 +210,24 @@
                 android:padding="5dp"
                 android:visibility="gone"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/readToggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Read More"
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal" />
             <ImageView
                 android:id="@+id/img_readToggle"
                 android:layout_width="wrap_content"
                 android:src="@drawable/icon_arrow_article"
                 android:layout_centerHorizontal="true"
+                android:layout_marginVertical="5dp"
                 android:layout_height="wrap_content"
                 app:tint="@color/txt_color_header" />
-            <TextView
-                android:id="@+id/readToggle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Read More"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:layout_gravity="center_horizontal" />
+
             </LinearLayout>
 
             <RelativeLayout
