following issues resolved 1. RAD-5984: Android[Prod]>ThinkRight>Journalling>journal calender page>“Add a New Journal Entry” border color is incorrect on Journal Calendar page 2. RAD-6000: Android[Prod]>Profile>Weight>“Confirm” text shown on button instead of “Save” on Weight screen 3. RAD-6002: Android[Prod]>Profile>age>Confirm button missing on Age screen 4. RAD-6010: [Android][Production][Profile]Mobile number input field remains open after number verification on Profile screen 5. RAD-6048: [Android][Production][Quicklinks]Journaling opens from Quick Links even when checklist is not completed 6. RAD-6050: User can proceed past “Please wait, starting camera” screen even after denying camera permission during Face Scan 7. RAD-6107: Android[Prod]>Think, Eat, move,sleepRight>category page>"Select Category" option showing again when expanding dropdown on Category page 8. RAD-6127: Sound box icon alignment incorrect in Sleep Sounds – Soundscapes tab 9. RAD-6136: Timeout toast message is appearing on Sleep Sounds section 10. RAD-6150: Android[Prod]>ThinkRight>Mind audit>Reason screen>Unwanted Quit Popup Displayed on Reason Screen When Pressing Back Button 11. RAD-6156: Selection and deselection not working properly on Mind Audit emotion selection screen 12. RAD-6152: Android[Prod]>ThinkRight>Mind audit>Suggested assessment>Mind Audit Reopens on Emotion Screen Instead of Suggested Assessment Screen After Navigating Back 13. RAD-6157: Incorrect Font Size for “Follow your curiosity” Heading on Onboarding Interest Screen 14. RAD-6159: Excessive spacing between bell icon and “You are 2.4x more likely to achieve your goals” text on Onboarding Enable Notification screen 15. RAD-6162: On RightLife free trial claim popup on carousel banner, some icons are not visible and going out of the screen.” 16. RAD-6163: Carousel on Free Trial Claim Popup Stops on Last Slide and Does Not Auto-Scroll Back to First 17. RAD-6164: Question mark icon misaligned with “Your setup checklist” text o

--- a/app/src/main/res/layout/bottomsheet_weight_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_weight_selection.xml
@@ -138,7 +138,7 @@
             android:layout_marginBottom="36dp"
             android:backgroundTint="@color/menuselected"
             android:fontFamily="@font/dmsans_bold"
-            android:text="Confirm"
+            android:text="Save"
             android:textColor="@color/white"
             android:textSize="@dimen/textsize_large" />
 
