--- a/app/src/main/res/drawable/dashed_rounded_border.xml
+++ b/app/src/main/res/drawable/dashed_rounded_border.xml
@@ -10,7 +10,7 @@
     <!-- Rounded corners -->
     <stroke
         android:width="1dp"
-        android:color="@color/color_think_right"
+        android:color="#984C01"
         android:dashWidth="8dp"
         android:dashGap="6dp" />
 </shape>
