--- a/app/src/main/res/layout/activity_saved_item_list.xml
+++ b/app/src/main/res/layout/activity_saved_item_list.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="ALL"
+            android:text="All"
             android:fontFamily="@font/merriweather_bold"
             android:textSize="14sp"
             android:textColor="@color/txt_color_header" />
