--- a/app/src/main/res/layout/bottomsheet_height_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_height_selection.xml
@@ -132,7 +132,7 @@
             android:layout_marginBottom="36dp"
             android:backgroundTint="@color/menuselected"
             android:fontFamily="@font/dmsans_bold"
-            android:text="@string/str_continue"
+            android:text="Save"
             android:textColor="@color/white"
             android:textSize="@dimen/textsize_large"
             android:layout_below="@+id/ll_main_ruler" />
