--- a/app/src/main/res/layout/item_serving.xml
+++ b/app/src/main/res/layout/item_serving.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_food_item"
     android:layout_margin="8dp"
-    android:padding="16dp">
+    android:padding="14dp">
 
     <ImageView
         android:id="@+id/imageIcon"
@@ -21,11 +21,11 @@
         android:layout_centerVertical="true"
         android:layout_toEndOf="@id/imageIcon"
         android:layout_toStartOf="@+id/layoutCounter"
-        android:layout_marginStart="12dp">
+        android:layout_marginStart="10dp">
 
         <TextView
             android:id="@+id/textTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Fruits"
             android:fontFamily="@font/dmsans_regular"
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/textCount"
-            android:layout_width="40dp"
+            android:layout_width="36dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="1"
