--- a/app/src/main/res/layout/item_vertical_song_card.xml
+++ b/app/src/main/res/layout/item_vertical_song_card.xml
@@ -7,15 +7,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/itemImage"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:layout_centerInParent="true"
-            android:layout_weight="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_estore_placeholder" />
 
