--- a/app/src/main/res/layout/layout_checklist.xml
+++ b/app/src/main/res/layout/layout_checklist.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:visibility="visible"
     android:orientation="vertical"
-
-
     android:layout_marginBottom="20dp"
     android:layout_height="match_parent">
 
@@ -17,28 +15,14 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minLines="2"
             android:fontFamily="@font/dmsans_bold"
             android:gravity="center_vertical"
             android:text="Your Setup Checklist"
             android:textColor="@color/text_color_app"
-
             android:textSize="@dimen/textsize_large" />
-
-
-        <TextView
-            android:id="@+id/tv_checklist_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_marginTop="1dp"
-            android:fontFamily="@font/dmsans_regular"
-            android:gravity="center_vertical"
-            android:text="1 of 6 tasks completed"
-            android:textColor="@color/text_color_char_left"
-            android:textSize="@dimen/textsize_medium" />
 
         <ImageView
             android:id="@+id/img_questionmark_checklist"
@@ -49,6 +33,16 @@
             android:layout_marginEnd="20dp"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_checklist_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dmsans_regular"
+            android:gravity="center_vertical"
+            android:text="1 of 6 tasks completed"
+            android:textColor="@color/text_color_char_left"
+            android:textSize="@dimen/textsize_medium" />
 
     <RelativeLayout
         android:id="@+id/rl_checklist_profile"
