--- a/app/src/main/res/layout/popup_category_list.xml
+++ b/app/src/main/res/layout/popup_category_list.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#A2A2A2"
-        android:layout_marginVertical="8dp" />
+        android:layout_marginVertical="8dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tvAll"
