Following issues resolved RAD-6049 RAD-6174 RAD-6014 RAD-6040 RAD-6041 RAD-6042 RAD-6043 RAD-6044 RAD-6045 RAD-6046 RAD-6039 RAD-6018 RAD-6017 RAD-6016 RAD-6012 RAD-6014 RAD-6013 RAD-6169

--- a/app/src/main/res/layout/activity_journal_list.xml
+++ b/app/src/main/res/layout/activity_journal_list.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:text="Thur . 17 Feb 2025"
             android:textSize="16sp"
-            android:textColor="@color/black"
+            android:textColor="@color/black_plain"
             android:textStyle="bold"
             android:layout_weight="1"
             android:textAlignment="center"/>
