--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -359,23 +359,28 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="120dp"
                                 android:layout_weight="1"
-                                android:background="@drawable/roundedcornerbutton"
                                 android:backgroundTint="@color/white"
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="120dp"
+                                    android:layout_height="90dp"
+                                    android:layout_margin="10dp"
+                                    app:cardUseCompatPadding="false"
+                                    app:cardPreventCornerOverlap="false"
+                                    app:cardCornerRadius="@dimen/margin_card_16dp">
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
                                     android:layout_weight=".5">
 
                                     <ImageView
                                         android:id="@+id/img_rledit1"
-                                        android:layout_width="160dp"
-                                        android:layout_height="120dp"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
                                         android:layout_alignParentStart="true"
-                                        android:src="@drawable/img_logintop1" />
+                                        android:src="@drawable/img_rledit2" />
                                     <LinearLayout
                                         android:id="@+id/ll_contet_type_rledit1"
                                         android:layout_width="match_parent"
@@ -406,11 +411,11 @@
                                             android:layout_marginStart="6dp" />
                                     </LinearLayout>
                                 </RelativeLayout>
-
+                                </androidx.cardview.widget.CardView>
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="10dp"
+                                    android:layout_marginTop="15dp"
                                     android:layout_marginBottom="10dp"
                                     android:layout_weight=".4">
 
@@ -520,10 +525,16 @@
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="120dp"
+                                    android:layout_height="90dp"
+                                    android:layout_margin="10dp"
+                                    app:cardUseCompatPadding="false"
+                                    app:cardPreventCornerOverlap="false"
+                                    app:cardCornerRadius="@dimen/margin_card_16dp">
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_margin="10dp"
                                     android:layout_weight=".5">
 
                                     <ImageView
@@ -562,11 +573,11 @@
                                             android:layout_marginStart="6dp" />
                                     </LinearLayout>
                                 </RelativeLayout>
-
+                                </androidx.cardview.widget.CardView>
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="10dp"
+                                    android:layout_marginTop="15dp"
                                     android:layout_marginBottom="10dp"
                                     android:layout_weight=".4">
 
