--- a/app/src/main/res/layout/fragment_serving.xml
+++ b/app/src/main/res/layout/fragment_serving.xml
@@ -19,18 +19,20 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewServing"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:overScrollMode="never" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:paddingVertical="@dimen/margin_card_16dp"
+        android:paddingHorizontal="8dp"
+        android:layout_weight="1"
         android:layout_marginTop="8dp">
 
-        <ImageView
+
+    <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/rlpage_info_icon"
