--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -7,7 +7,7 @@
     android:layout_weight="1"
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@color/white_plain">
 
     <LinearLayout
         android:layout_width="match_parent"
